--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">Mst Dilshad Jahan</a>.</h1>
+					<h1><strong>I am Dilshad</strong>, Master's Student at Uni Bremen<br />
+					and part time research assistant at BIBA<br />
 				</div>
 			</header>
 
@@ -29,10 +28,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>If you came to this far, than I believe I have drawn your attention.<br />
+							</h2>
 						</header>
-						<p>Hahahhahahahahhahahahahahahah</p>
+						<p>Heh, I was joking.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
