--- a/index.html
+++ b/index.html
@@ -53,8 +53,14 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Design-Analysis-of-a-Micro-strip-Patch-Antenna-for-RFID-WiMAX-and-X-band-Applications</h3>
+								<h3>Modeling Investment Decisions in Hybrid Renewable Energy Systems through
+								Smart Grid Integration using Agent-Based Modeling (ABM)</h3>
 								<p></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+								<h3> IoTBased Electrical Load Control System to Minimize the Waste of Electrical Power</h3>
+								<p></p> 
 							</article>
 			
 						</div>
