--- a/index.html
+++ b/index.html
@@ -90,17 +90,17 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
+										Luisental 29F, .<br />
+										28359 Bremen <br />
+										Germany				
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
+										000-000-00
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">mstdilshad.jahan@gmail.com</a>
 									</li>
 								</ul>
 							</div>
