--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						<p>If You want to communicate with me then Kindly write an email .</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
