--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										Luisental 29F, .<br />
-										28359 Bremen <br />
+										 <br />
+										 Bremen <br />
 										Germany				
 									</li>
 									<li>
