--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Dilshad</strong>, Master's Student at Uni Bremen<br />
-					and part time research assistant at BIBA<br />
+					<h1><strong>I am Dilshad Jahan </strong>, Master's Student at University of  Bremen, Germany <br />
+					and part time research assistant at BIBA - Bremer Institut für Produktion und Logistik GmbH <br />
 				</div>
 			</header>
 
