--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="images/fulls/01.jpg.png" class="image fit thumb"><img src="images/thumbs/01.jpg.png" alt="" /></a>
 								<h3>Estimate-the-Indoor-positioning-by-Array-Antenna-and-MUSIC-Algorithm</h3>
 								<p> </p>
 							</article>
