--- a/index.html
+++ b/index.html
@@ -42,20 +42,21 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg.png" class="image fit thumb"><img src="images/thumbs/01.jpg.png" alt="" /></a>
-								<h3>Estimate-the-Indoor-positioning-by-Array-Antenna-and-MUSIC-Algorithm</h3>
-								<p> </p>
+								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+								<h3>Modeling Investment Decisions in Hybrid Renewable Energy Systems through
+								Smart Grid Integration using Agent-Based Modeling (ABM)</h3>
+								<p></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h3>Optimization-Analysis-and-Test-Microgrid-Model-Based-on-DER-Integration-and-Load-Profile-Management</h3>
 								<p></p> 
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Modeling Investment Decisions in Hybrid Renewable Energy Systems through
-								Smart Grid Integration using Agent-Based Modeling (ABM)</h3>
-								<p></p>
+							
+								<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg.png" alt="" /></a>
+								<h3>Estimate-the-Indoor-positioning-by-Array-Antenna-and-MUSIC-Algorithm</h3>
+								<p> </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
